--- a/project2/app/templates/app/artistBio.html
+++ b/project2/app/templates/app/artistBio.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <div class="jumbotron jumbotron-fluid" style=" background-image: url({{image}});">
+    <div class="jumbotron jumbotron-fluid" style=" background-image: url({{ image }});">
       <div class="container">
         <h1 class="display-4">{{ name }}</h1>
           <p>{{ followers }} followers</p>
@@ -14,7 +14,7 @@
             <div class="col-12 col-md-9">
                 <div style="padding-bottom: 30px">
                     <h1>Popular</h1>
-                        <div class="card ">
+                        <div class="card" style="height: 15rem;">
                            <div class="card-body">
                                <table class="table table-hover">
                                   <thead>
@@ -52,86 +52,7 @@
                           </div>
                       </div>
                 </div>
-                <div style="padding-bottom: 30px">
-                    <h1>Album #1</h1>
-                        <div class="card ">
-                           <div class="card-body">
-                               <table class="table table-hover">
-                                  <thead>
-                                    <tr>
-                                      <th scope="col">#</th>
-                                      <th scope="col">Music</th>
-                                      <th scope="col">Artists</th>
-                                      <th scope="col">Time</th>
-                                      <th scope="col">Likes</th>
-                                    </tr>
-                                  </thead>
-                                  <tbody>
-                                    <tr>
-                                      <th scope="row">1</th>
-                                      <td>Mark</td>
-                                      <td>Otto</td>
-                                      <td>@mdo</td>
-                                      <td>@mdo</td>
-                                    </tr>
-                                    <tr>
-                                      <th scope="row">2</th>
-                                      <td>Jacob</td>
-                                      <td>Thornton</td>
-                                      <td>@fat</td>
-                                      <td>@fat</td>
-                                    </tr>
-                                    <tr>
-                                      <th scope="row">3</th>
-                                      <td colspan="2">Larry the Bird</td>
-                                      <td>@twitter</td>
-                                      <td>@twitter</td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                          </div>
-                      </div>
-                </div>
-                <div style="padding-bottom: 30px">
-                    <h1>Album #2</h1>
-                        <div class="card">
-                           <div class="card-body">
-                               <table class="table table-hover">
-                                  <thead>
-                                    <tr>
-                                      <th scope="col">#</th>
-                                      <th scope="col">Music</th>
-                                      <th scope="col">Artists</th>
-                                      <th scope="col">Time</th>
-                                      <th scope="col">Likes</th>
-                                    </tr>
-                                  </thead>
-                                  <tbody>
-                                    <tr>
-                                      <th scope="row">1</th>
-                                      <td>Mark</td>
-                                      <td>Otto</td>
-                                      <td>@mdo</td>
-                                      <td>@mdo</td>
-                                    </tr>
-                                    <tr>
-                                      <th scope="row">2</th>
-                                      <td>Jacob</td>
-                                      <td>Thornton</td>
-                                      <td>@fat</td>
-                                      <td>@fat</td>
-                                    </tr>
-                                    <tr>
-                                      <th scope="row">3</th>
-                                      <td colspan="2">Larry the Bird</td>
-                                      <td>@twitter</td>
-                                      <td>@twitter</td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                          </div>
-                      </div>
-                </div>
+
 
             </div>
 
