--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -30,7 +30,7 @@
                          src="{{ top_track.src.value }}" alt="Card image">
                     <div class="card-body">
                         <h6 class="card-title">{{ top_track.name.value }}</h6>
-                        <a href="/artist/id={{ top_track.src.value }}/" class="card-text badge badge-pill badge-secondary ">{{ top_track.artists.value }}</a>
+                        <a href="/artist/id={{ top_track.ids.value }}/" class="card-text badge badge-pill badge-secondary ">{{ top_track.artists.value }}</a>
                     </div>
                 </div>
             </div>
