--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -51,7 +51,7 @@
 
      {% block content %}{% endblock %}
 
-    <footer class="container body-content fixed">
+    <footer class="container body-content fixed-bottom">
         <hr/>
         <p>&copy; 2017 EDC - Cristiana Carvalho, Daniela Simões, Domingos Nunes</p>
     </footer>
