--- a/project2/app/templates/app/artistBio.html
+++ b/project2/app/templates/app/artistBio.html
@@ -6,14 +6,24 @@
 <div class="jumbotron jumbotron-fluid" style=" background-image: url({{ image }});">
     <div class="container" style="text-shadow: 1px 0px 2px rgba(255, 255, 255, 0.8);">
         <h1 class="display-4">{{ name }}</h1>
-        {% if wikidata.birth %}
-        <small>Born in: {{ wikidata.birth }}</small><br>
+        {% if artist_info.birth %}
+        <small>Born in: {{ artist_info.birth }}</small><br>
         {% endif %}
-        <a style="color: #343a40" href="https://www.facebook.com/{{ wikidata.facebook }}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a style="color: #343a40" href="https://www.twitter.com/{{ wikidata.twitter }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a style="color: #343a40" href="https://www.instagram.com/{{ wikidata.instagram }}"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-        <a style="color: #343a40" href="{{ wikidata.official_site }}"><i class="fa fa-globe" aria-hidden="true"></i></a>
-        <h6>{{ wikidata.country_name }}</h6>
+        {% if artist_info.facebook %}
+        <a style="color: #343a40" href="https://www.facebook.com/{{ artist_info.facebook }}"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        {% endif %}
+        {% if artist_info.twitter %}
+        <a style="color: #343a40" href="https://www.twitter.com/{{ artist_info.twitter }}"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        {% endif %}
+        {% if artist_info.instagram %}
+        <a style="color: #343a40" href="https://www.instagram.com/{{ artist_info.instagram }}"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        {% endif %}
+        {% if artist_info.official_site %}
+        <a style="color: #343a40" href="{{ artist_info.official_site }}"><i class="fa fa-globe" aria-hidden="true"></i></a>
+        {% endif %}
+        {% if artist_info.country_name %}
+        <h6>{{ artist_info.country_name }}</h6>
+        {% endif %}
     </div>
 </div>
 <div class="container">
@@ -63,9 +73,26 @@
 
         </div>
 
-        <div class="col-6 col-md-3 sidebar-offcanvas " style="padding-top: 5px;">
+        <div class="col-6 col-md-3 sidebar-offcanvas " style="padding-top: 10px;">
             <div class="row">
                 <div class="col-lg-12">
+                    <h2 style="text-align: right">Relationships</h2>
+                    <div class="card" style="padding: 1.25rem">
+                        {% if artist_rel.father %}
+                            <small><strong>Father:</strong> {{ artist_rel.father }}</small>
+                        {% endif %}
+                        {% if artist_rel.mother %}
+                            <small><strong>Mother:</strong> {{ artist_rel.mother }}</small>
+                        {% endif %}
+                        {% if artist_rel.sibling|length > 0 %}
+                            {% for sibling in artist_rel.sibling %}
+                                <small><strong>Sibling:</strong> {{ sibling }}</small>
+                            {% endfor %}
+                        {% elif artist_rel.sibling %}
+                            <small><strong>Sibling:</strong> {{ artist_rel.sibling }}</small>
+                        {% endif %}
+                    </div>
+
                 </div>
                 <div class="col-lg-12">
                     <h2 style="text-align: right">Twitter Feed</h2>
