--- a/project2/app/templates/app/artistBio.html
+++ b/project2/app/templates/app/artistBio.html
@@ -24,13 +24,20 @@
         {% if artist_info.country_name %}
         <h6>{{ artist_info.country_name }}</h6>
         {% endif %}
+
+        {% if artist_genre.genre %}
+        <br/>
+        <small class="text-capitalize">
+            {{ artist_genre.genre|join:", " }}
+        </small>
+        {% endif %}
     </div>
 </div>
 <div class="container">
     <div class=" row row-offcanvas row-offcanvas-right">
         <div class="col-12 col-md-9">
             <div style="padding-bottom: 30px">
-                <h1>Popular</h1>
+                <h3>Popular</h3>
                 <div class="card" style="height: 15rem;">
                     <div class="card-body">
                         <table class="table table-hover">
@@ -73,10 +80,11 @@
 
         </div>
 
-        <div class="col-6 col-md-3 sidebar-offcanvas " style="padding-top: 10px;">
+        <div class="col-6 col-md-3 sidebar-offcanvas ">
             <div class="row">
+                {% if artist_rel.father or artist_rel.mother or artist_rel.sibling %}
                 <div class="col-lg-12">
-                    <h2 style="text-align: right">Relationships</h2>
+                    <h3 style="text-align: right">Relationships</h3>
                     <div class="card" style="padding: 1.25rem">
                         {% if artist_rel.father %}
                             <small><strong>Father:</strong> {{ artist_rel.father }}</small>
@@ -92,14 +100,23 @@
                             <small><strong>Sibling:</strong> {{ artist_rel.sibling }}</small>
                         {% endif %}
                     </div>
-
                 </div>
+                {% endif %}
+
+                {% if artist_rel.father or artist_rel.mother or artist_rel.sibling %}
                 <div class="col-lg-12">
-                    <h2 style="text-align: right">Twitter Feed</h2>
-                    <div class="card">
-                        asdasdsad
+                    <h3 style="text-align: right">Occupations</h3>
+                    <div class="card" style="padding: 1.25rem">
+                        {% if artist_occupations.occupations|length > 0 %}
+                            {% for occupation in artist_occupations.occupations %}
+                            <p>{{ occupation }}</p>
+                            {% endfor %}
+                        {% elif artist_occupations.occupations %}
+                            <p>{{ artist_occupations.occupations }}</p>
+                        {% endif %}
                     </div>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
