--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -5,7 +5,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Spotify</title>
+    {% if title %}
+        <title>Spotify - {{ title }}</title>
+    {% else %}
+        <title>Spotify</title>
+    {% endif %}
     <link rel="icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}"/>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}"/>
