--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="{% url 'user_account' %}">My Account</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" id="formsearch" method="post">
+        <form class="form-inline my-2 my-lg-0" id="formsearch" method="post" action="/search">
             {% csrf_token %}
             <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
