--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -1,10 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "app/layout.html" %}
+{% load staticfiles %}
 
-</body>
-</html>
+{% block content %}
+
+<div class="jumbotron jumbotron-fluid"
+     style=" background-image: url({{ music.image_url.0 }}); background-repeat: no-repeat; background-attachment: fixed; background-position: center top; ">
+    <div class="container" style="text-shadow: 1px 0px 2px rgba(255, 255, 255, 0.8);">
+        <h1 class="display-4">{{ music.name_track }}</h1>
+        {% if music.artists|length > 0 %}
+        <h4>
+            {% for artist in music.artists %}
+            {% if forloop.last %}
+            <a style="color: black" href="/artist/id={{ artist.1 }}/">{{ artist.0 }}</a>
+            {% else %}
+            <a style="color: black" href="/artist/id={{ artist.1 }}/">{{ artist.0 }}</a><span
+                style="color: dimgrey">,</span>
+            {% endif %}
+            {% endfor %}</i>
+        </h4>
+        {% elif music.artists %}
+        <a href=""><h4>{{ music.artists }}</h4></a>
+        {% endif %}
+
+        <small><strong>Popularity:</strong> {{ music.popularity}}%</small>
+
+        <h5 style="margin-top: 10px">
+            <i class="fa fa-pause" id="play_pause" style="cursor: pointer" aria-hidden="true"></i> <i id="play_text">Playing...</i>
+        </h5>
+
+        {% if artist_genre.genre %}
+        <br/>
+        <small class="text-capitalize">
+            {{ artist_genre.genre|join:", " }}
+        </small>
+        {% endif %}
+
+        <audio id="audio_preview" controls autoplay>
+            <source src="{{music.preview_url}}" type="audio/ogg">
+            <source src="{{music.preview_url}}" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+
+        <script type="application/javascript">
+            $("#audio_preview").hide();
+
+            $("#audio_preview")[0].addEventListener('ended', function(){
+                    $("#play_pause").removeClass("fa-pause");
+                    $("#play_pause").addClass("fa-play");
+                    $("#play_text").html("Stopped...");
+            });
+
+            $("#play_pause").click(function () {
+                var player = $("#audio_preview")[0];
+                if (player.paused == false) {
+                    player.pause();
+                    $(this).removeClass("fa-pause");
+                    $(this).addClass("fa-play");
+                    $("#play_text").html("Paused...");
+                } else {
+                    player.play();
+                    $(this).removeClass("fa-play");
+                    $(this).addClass("fa-pause");
+                    $("#play_text").html("Playing...");
+                }
+            });
+        </script>
+    </div>
+</div>
+<div class="container">
+    <div class=" row row-offcanvas row-offcanvas-right">
+        <div class="col-12 col-md-12">
+            <div style="padding-bottom: 30px">
+                <div class="card" style="padding: 1.25rem">
+                    <div class="card-block">
+                        <iframe src="https://open.spotify.com/embed?uri={{music.uri}}" width="100%" height="380"
+                                frameborder="0" allowtransparency="true"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+{% endblock %}
