Fixed home page

--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -6,16 +6,22 @@
     <div>
         <h1>New Albums and Singles</h1>
         <div class="row">
-            {% for name,image in new_releases %}
+            {% for track in new_releases %}
             <div class="col-sm-3">
                 <div class="card">
-                    <a href="/music/id={{top_track.id}}">
+                    <a href="/music/id={{track.id}}">
                     <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                         src="{{ image }}" alt="Card image">
+                         src="{{ track.src }}" alt="Card image">
                     </a>
                     <div class="card-body">
-                        <h6 class="card-title"> {{ name }} </h6>
-                        <a href="#" class="card-text badge badge-pill badge-secondary ">Songs</a>
+                        <a style="color: black" href="/music/id={{track.id}}">
+                            <h6 class="card-title text-capitalize"> {{ track.name }} </h6>
+                        </a>
+                        {% if track.artists|length > 0 %}
+                            {% for artist in track.artists %}
+                                <a href="/artist/id={{ artist.1 }}/" class="card-text badge badge-pill badge-secondary ">{{ artist.0 }}</a>
+                            {% endfor %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
