--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -26,7 +26,7 @@
 </head>
 
 
-<body style="background-color: whitesmoke">
+<body style="background-color: white">
 
 
 
@@ -40,7 +40,6 @@
         </ul>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'user_account' %}">My Account</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" id="formsearch" method="post" action="/search">
