--- a/project2/app/templates/app/loginpartial.html
+++ b/project2/app/templates/app/loginpartial.html
@@ -12,7 +12,7 @@
         <div>
             {% csrf_token %}
             <span style="font-size: 18px; color: white; padding-right: 10px; padding-left: 20px">Hello, {{ username }}</span>
-            <img src={{ photo }} style="height: 40px; width: 40px; border-radius: 30px 30px 30px 30px;">
+            <a href="{% url 'user_account' %}"><img src={{ photo }} style="height: 40px; width: 40px; border-radius: 30px 30px 30px 30px;"></a>
             <a style="padding-left: 10px; color: white;" href="/spotify_logout/">Log out</a>
         </div>
     {% endif %}
