--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -42,10 +42,14 @@
             <li class="nav-item active">
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" id="formsearch" method="post" action="/search">
+        <form class="form-inline" id="formsearch" method="post" action="/search">
             {% csrf_token %}
-            <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            <div class="input-group" style="width: 170px">
+              <input type="text" class="form-control" name="search" placeholder="Search for..." aria-label="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-secondary" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+              </span>
+            </div>
         </form>
         {% include 'app/loginpartial.html' %}
     </div>
