--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -3,23 +3,23 @@
 
 {% block content %}
 
-<div class="jumbotron jumbotron-fluid"
+<div class="jumbotron jumbotron-fluid" xmlns:foaf="http://xmlns.com/foaf/spec/" about="http://www.top-tracks.com/items/"
      style=" background-image: url({{ music.image_url.0 }}); background-repeat: no-repeat; background-attachment: fixed; background-position: center top; ">
     <div class="container" style="text-shadow: 1px 0px 2px rgba(255, 255, 255, 0.8);">
-        <h1 class="display-4">{{ music.name_track }}</h1>
-        <h4>
+        <h1 class="display-4" property="foaf:name_track">{{ music.name_track }}</h1>
+        <h4 rel="spot:artists">
             {% for artist in music.artists %}
             {% if forloop.last %}
-            <a style="color: black" href="/artist/id={{ artist.1 }}/">{{ artist.0 }}</a>
+            <a style="color: black" href="/artist/id={{ artist.1 }}/" about="http://www.top-tracks.com/artists/#/#" property="foaf:name">{{ artist.0 }}</a>
             {% else %}
-            <a style="color: black" href="/artist/id={{ artist.1 }}/">{{ artist.0 }}</a><span
+            <a style="color: black" href="/artist/id={{ artist.1 }}/" about="http://www.top-tracks.com/artists/#/#" property="foaf:name">{{ artist.0 }}</a><span
                 style="color: dimgrey">,</span>
             {% endif %}
-            {% endfor %}</i>
+            {% endfor %}
         </h4>
 
         {% if music.popularity %}
-        <small><strong>Popularity:</strong> {{ music.popularity}}%</small>
+        <small property="spot:popularity"><strong>Popularity:</strong> {{ music.popularity}}%</small>
         {% endif %}
 
         {% if music.preview_url %}
@@ -27,7 +27,7 @@
                 <i class="fa fa-pause" id="play_pause" style="cursor: pointer" aria-hidden="true"></i> <i id="play_text">Playing...</i>
             </h5>
 
-            <audio id="audio_preview" controls autoplay>
+            <audio id="audio_preview" controls autoplay property="spot:preview_url">
                 <source src="{{music.preview_url}}" type="audio/ogg">
                 <source src="{{music.preview_url}}" type="audio/mpeg">
                 Your browser does not support the audio element.
