--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -3,16 +3,16 @@
 
 {% block content %}
 
-<div class="jumbotron jumbotron-fluid" xmlns:foaf="http://xmlns.com/foaf/spec/" about="http://www.top-tracks.com/items/"
+<div class="jumbotron jumbotron-fluid" xmlns:foaf="http://xmlns.com/foaf/spec/" about="http://www.top-tracks.com/items/{{ music_id }}"
      style=" background-image: url({{ music.image_url.0 }}); background-repeat: no-repeat; background-attachment: fixed; background-position: center top; ">
     <div class="container" style="text-shadow: 1px 0px 2px rgba(255, 255, 255, 0.8);">
         <h1 class="display-4" property="foaf:name_track">{{ music.name_track }}</h1>
         <h4 rel="spot:artists">
             {% for artist in music.artists %}
             {% if forloop.last %}
-            <a style="color: black" href="/artist/id={{ artist.1 }}/" about="http://www.top-tracks.com/artists/#/#" property="foaf:name">{{ artist.0 }}</a>
+            <a style="color: black" href="/artist/id={{ artist.1 }}/" about="http://www.top-tracks.com/artists/{{ music_id }}/{{ artist.1 }}" property="foaf:name">{{ artist.0 }}</a>
             {% else %}
-            <a style="color: black" href="/artist/id={{ artist.1 }}/" about="http://www.top-tracks.com/artists/#/#" property="foaf:name">{{ artist.0 }}</a><span
+            <a style="color: black" href="/artist/id={{ artist.1 }}/" about="http://www.top-tracks.com/artists/{{ music_id }}/{{ artist.1 }}" property="foaf:name">{{ artist.0 }}</a><span
                 style="color: dimgrey">,</span>
             {% endif %}
             {% endfor %}
