--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -28,6 +28,7 @@
             {% endfor %}
         </div>
     </div>
+    {% if top_tracks %}
     <div style="padding-top: 30px">
         <h1>Top Tracks</h1>
         <div class="row">
@@ -51,6 +52,7 @@
             {% endfor %}
         </div>
     </div>
+    {% endif %}
 </div>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
