--- a/project2/app/templates/app/music.html
+++ b/project2/app/templates/app/music.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="jumbotron jumbotron-fluid" xmlns:foaf="http://xmlns.com/foaf/spec/" about="http://www.top-tracks.com/items/{{ music_id }}"
+<div class="jumbotron jumbotron-fluid" xmlns:foaf="http://xmlns.com/foaf/spec/" xmlns:spot="http://top-tracks.org/pred/" about="http://www.top-tracks.com/items/{{ music_id }}"
      style=" background-image: url({{ music.image_url.0 }}); background-repeat: no-repeat; background-attachment: fixed; background-position: center top; ">
     <div class="container" style="text-shadow: 1px 0px 2px rgba(255, 255, 255, 0.8);">
         <h1 class="display-4" property="foaf:name_track">{{ music.name_track }}</h1>
